@startuml class_diagram
package "com.ktx.model" {
    class SinhVien {
        - String maSV
        - String hoTen
        - LocalDate ngaySinh
        - String gioiTinh
        - String lop
        - String khoa
        - String soDT
        - String queQuan
        - String email
        - String taiKhoan
        - String matKhau
        - String phongHienTai
        + getMaSV()
        + setMaSV(String)
        + getHoTen()
        + toString()
    }

    class NhanVien {
        - String maNV
        - String hoTen
        - String vaiTro
        - String soDT
        - String email
        - String taiKhoan
        - String matKhau
    }

    class DayNha {
        - String maDay
        - String tenDay
        - String loaiDay
        - Integer soTang
    }

    class Phong {
        - String maPhong
        - String tenPhong
        - String loaiPhong
        - int sucChua
        - int soNguoiHienTai
        - BigDecimal giaPhong
        - String trangThai
        - String maDay
    }

    class HopDong {
        - String maHD
        - LocalDate ngayLap
        - LocalDate ngayBatDau
        - LocalDate ngayKetThuc
        - BigDecimal tienCoc
        - String trangThai
        - String maSV
        - String maPhong
        - String maNV
    }

    class DonDangKy {
        - String maDon
        - LocalDate ngayGui
        - int hocKy
        - String namHoc
        - String trangThai
        - String maSV
        - String maPhong
    }

    class HoaDon {
        - String maHDon
        - int thang
        - int nam
        - BigDecimal chiSoDienCu
        - BigDecimal chiSoDienMoi
        - BigDecimal chiSoNuocCu
        - BigDecimal chiSoNuocMoi
        - BigDecimal phuPhi
        - BigDecimal tongTien
        - String trangThaiThanhToan
        - String maPhong
        - String maNV
    }

    class HoaDonTienPhong {
        - String maHDTP
        - int thang
        - int nam
        - BigDecimal soTien
        - LocalDate hanThanhToan
        - String trangThai
        - String maHopDong
    }

    class CauHinhGia {
        - int id
        - String loai
        - BigDecimal gia
        - LocalDate ngayApDung
    }

    class AuditLog {
        - int id
        - String maNV
        - String hanhDong
        - LocalDateTime thoiGian
        - String chiTiet
    }
}

DayNha "1" *-- "many" Phong
SinhVien "1" -- "many" HopDong
Phong "1" -- "many" HopDong
NhanVien "1" -- "many" HopDong
SinhVien "1" -- "many" DonDangKy
Phong "1" -- "many" DonDangKy
Phong "1" -- "many" HoaDon
NhanVien "1" -- "many" HoaDon
HopDong "1" -- "many" HoaDonTienPhong
NhanVien "1" -- "many" AuditLog

@enduml
